@@ -1,6 +1,9 @@
 2007-06-10  Inge Wallin  <ingwa@shihonage.lkpg.cendio.se>
 
 	Clean up
+	* src/lib/clippainter.{h,cpp}: use the m_ convention everywhere.
+
+	Clean up
 	* src/lib/vectormap.{h,cpp}: use the m_ convention everywhere.
 
 	Minor cleaning while learning the code
